# gamegame-py

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  Procfile  Procfile.dev  README.md  SCAFFOLDING_PLAN.md  TESTING.md  docker-compose.yml  mise.toml
.claude/: settings.json
backend/: .env.example  AGENTS.md  GAP_ANALYSIS.md  README.md  TESTING.md  pyproject.toml
backend/evals/cases/: boardgame_smoke.json
backend/migrations/: env.py
backend/migrations/versions/: 0a8665379286_add_ondelete_to_fk_constraints.py  5b9035552706_add_content_hash_to_attachments.py  a1b2c3d4e5f6_add_search_quality_improvements.py  b2c3d4e5f6g7_add_workflow_runs_table.py  b8455ec27832_add_chapters_table.py  c3d4e5f6g7h8_add_attachment_fields.py  c9566fd34721_rename_chapters_to_segments.py  d4e5f6g7h8i9_add_resource_fields.py  e2345678901b_add_segment_to_processingstage.py  e5f6g7h8i9j0_model_parity_fixes.py  f3456789abcd_schema_cleanup.py  f35fcf511ab5_initial_schema_with_all_models.py  f363b308d775_add_processing_metadata_to_resources.py  g4567890bcde_add_bgg_games_table.py  h5678901cdef_add_segment_summary_embeddings.py
backend/scripts/: chat_client.py  verify.sh
backend/src/gamegame/: __init__.py  config.py  constants.py  database.py  logging.py  main.py  worker.py
backend/src/gamegame/ai/: __init__.py
backend/src/gamegame/api/: attachments.py  auth.py  bgg.py  chat.py  deps.py  games.py  health.py  middleware.py  resources.py  router.py  search.py  segments.py  upload.py  utils.py  workflows.py
backend/src/gamegame/cli/: __init__.py  ask.py  attachments.py  bgg.py  db.py  evals.py  games.py  maintenance.py  resources.py  search.py  users.py  workflows.py
backend/src/gamegame/models/: __init__.py  attachment.py  base.py  bgg_game.py  embedding.py  fragment.py  game.py  model_config.py  resource.py  segment.py  user.py  verification_token.py  workflow_run.py
backend/src/gamegame/schemas/: __init__.py  common.py
backend/src/gamegame/services/: attachment_analysis.py  auth.py  bgg.py  chat.py  email.py  openai_client.py  rate_limit.py  resilience.py  search.py  storage.py  workflow_tracking.py
backend/src/gamegame/services/pipeline/: __init__.py  cleanup.py  embed.py  finalize.py  ingest.py  metadata.py  segments.py  vision.py
backend/src/gamegame/tasks/: __init__.py  attachments.py  maintenance.py  pipeline.py  queue.py
backend/src/gamegame/utils/: image.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_attachments.py  test_auth.py  test_bgg.py  test_chat.py  test_games.py  test_health.py  test_resources.py  test_search.py  test_upload.py  test_workflows.py
backend/tests/services/: test_chat_streaming.py  test_email.py  test_evals_cli.py
backend/tests/tasks/: test_pipeline.py
docs/: SPEC.md  scythe-example.md
frontend/: AGENTS.md  biome.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  react-router.config.ts  tsconfig.json  vite.config.ts
frontend/app/: entry.server.tsx  root.tsx
frontend/app/api/: client.ts  types.ts
frontend/app/components/: admin-layout.tsx  connection-warning.tsx  error-boundary.tsx  file-upload.tsx  layout.tsx  logo.tsx  page-header.tsx  processing-timeline.tsx  protected-route.tsx
frontend/app/contexts/: auth.tsx  toast.tsx  workflow-tracking.tsx
frontend/app/hooks/: index.ts  (+11 more)
frontend/tests/: smoke.spec.ts
scripts/: bootstrap.sh
(+49 files in other folders)
